--- a/WolvenKit.App/packages.config
+++ b/WolvenKit.App/packages.config
@@ -1,24 +1,26 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="CsvHelper" version="15.0.5" targetFramework="net48" />
+  <package id="CsvHelper" version="16.0.0" targetFramework="net48" />
   <package id="FastMember" version="1.5.0" targetFramework="net48" />
-  <package id="Microsoft.Bcl.AsyncInterfaces" version="1.1.1" targetFramework="net48" />
+  <package id="Microsoft.Bcl.AsyncInterfaces" version="5.0.0" targetFramework="net48" />
   <package id="Microsoft.CSharp" version="4.7.0" targetFramework="net48" />
-  <package id="Microsoft.NETCore.Platforms" version="3.1.1" targetFramework="net48" />
+  <package id="Microsoft.NETCore.Platforms" version="5.0.0" targetFramework="net48" />
   <package id="Microsoft.Win32.Primitives" version="4.3.0" targetFramework="net48" />
   <package id="NETStandard.Library" version="2.0.3" targetFramework="net48" />
   <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net48" />
   <package id="Pfim" version="0.9.1" targetFramework="net48" />
-  <package id="protobuf-net" version="2.4.6" targetFramework="net48" />
-  <package id="SharpZipLib" version="1.2.0" targetFramework="net48" />
+  <package id="protobuf-net" version="3.0.62" targetFramework="net48" />
+  <package id="protobuf-net.Core" version="3.0.62" targetFramework="net48" />
+  <package id="SharpZipLib" version="1.3.0" targetFramework="net48" />
   <package id="SymbolicLinkSupport" version="1.2.0" targetFramework="net48" />
   <package id="System.AppContext" version="4.3.0" targetFramework="net48" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net48" />
   <package id="System.Collections" version="4.3.0" targetFramework="net48" />
   <package id="System.Collections.Concurrent" version="4.3.0" targetFramework="net48" />
+  <package id="System.Collections.Immutable" version="5.0.0" targetFramework="net48" />
   <package id="System.Console" version="4.3.1" targetFramework="net48" />
   <package id="System.Diagnostics.Debug" version="4.3.0" targetFramework="net48" />
-  <package id="System.Diagnostics.DiagnosticSource" version="4.7.1" targetFramework="net48" />
+  <package id="System.Diagnostics.DiagnosticSource" version="5.0.0" targetFramework="net48" />
   <package id="System.Diagnostics.Tools" version="4.3.0" targetFramework="net48" />
   <package id="System.Diagnostics.Tracing" version="4.3.0" targetFramework="net48" />
   <package id="System.Globalization" version="4.3.0" targetFramework="net48" />
@@ -40,7 +42,7 @@
   <package id="System.Reflection.Primitives" version="4.3.0" targetFramework="net48" />
   <package id="System.Resources.ResourceManager" version="4.3.0" targetFramework="net48" />
   <package id="System.Runtime" version="4.3.1" targetFramework="net48" />
-  <package id="System.Runtime.CompilerServices.Unsafe" version="4.7.1" targetFramework="net48" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="5.0.0" targetFramework="net48" />
   <package id="System.Runtime.Extensions" version="4.3.1" targetFramework="net48" />
   <package id="System.Runtime.Handles" version="4.3.0" targetFramework="net48" />
   <package id="System.Runtime.InteropServices" version="4.3.0" targetFramework="net48" />
