--- a/WolvenKit.Console/packages.config
+++ b/WolvenKit.Console/packages.config
@@ -3,14 +3,15 @@
   <package id="CommandLineParser" version="2.8.0" targetFramework="net48" />
   <package id="ConsoleProgressBar" version="1.0.1" targetFramework="net48" />
   <package id="Goblinfactory.Konsole" version="6.2.0" targetFramework="net48" />
-  <package id="Microsoft.Bcl.AsyncInterfaces" version="1.1.0" targetFramework="net48" />
-  <package id="Npgsql" version="4.1.4" targetFramework="net48" />
-  <package id="System.Buffers" version="4.5.0" targetFramework="net48" />
-  <package id="System.Memory" version="4.5.3" targetFramework="net48" />
+  <package id="Microsoft.Bcl.AsyncInterfaces" version="5.0.0" targetFramework="net48" />
+  <package id="Npgsql" version="5.0.0" targetFramework="net48" />
+  <package id="System.Buffers" version="4.5.1" targetFramework="net48" />
+  <package id="System.Memory" version="4.5.4" targetFramework="net48" />
   <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net48" />
-  <package id="System.Runtime.CompilerServices.Unsafe" version="4.6.0" targetFramework="net48" />
-  <package id="System.Text.Encodings.Web" version="4.6.0" targetFramework="net48" />
-  <package id="System.Text.Json" version="4.6.0" targetFramework="net48" />
-  <package id="System.Threading.Tasks.Extensions" version="4.5.3" targetFramework="net48" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="5.0.0" targetFramework="net48" />
+  <package id="System.Text.Encodings.Web" version="5.0.0" targetFramework="net48" />
+  <package id="System.Text.Json" version="5.0.0" targetFramework="net48" />
+  <package id="System.Threading.Channels" version="5.0.0" targetFramework="net48" />
+  <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net48" />
   <package id="System.ValueTuple" version="4.5.0" targetFramework="net48" />
 </packages>
