--- a/WolvenKit.W3Strings/packages.config
+++ b/WolvenKit.W3Strings/packages.config
@@ -1,4 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="protobuf-net" version="2.4.6" targetFramework="net48" />
+  <package id="protobuf-net" version="3.0.62" targetFramework="net48" />
+  <package id="protobuf-net.Core" version="3.0.62" targetFramework="net48" />
+  <package id="System.Buffers" version="4.5.1" targetFramework="net48" />
+  <package id="System.Collections.Immutable" version="5.0.0" targetFramework="net48" />
+  <package id="System.Memory" version="4.5.4" targetFramework="net48" />
+  <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net48" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="5.0.0" targetFramework="net48" />
 </packages>
