--- a/WolvenKit/packages.config
+++ b/WolvenKit/packages.config
@@ -2,11 +2,11 @@
 <packages>
   <package id="AltoControls" version="1.0.1" targetFramework="net461" />
   <package id="AutoCompleteMenu-ScintillaNET" version="1.6.2" targetFramework="net48" />
-  <package id="Autoupdater.NET.Official" version="1.6.0" targetFramework="net48" />
+  <package id="Autoupdater.NET.Official" version="1.6.4" targetFramework="net48" />
   <package id="CircularProgressBar" version="2.8.0.16" targetFramework="net48" />
   <package id="CommandLineParser" version="2.8.0" targetFramework="net48" />
   <package id="CSharpImageLibrary" version="4.2.0" targetFramework="net48" />
-  <package id="CsvHelper" version="15.0.5" targetFramework="net48" />
+  <package id="CsvHelper" version="16.0.0" targetFramework="net48" />
   <package id="CyotekImageBox" version="1.3.0-Alpha1" targetFramework="net461" />
   <package id="DevZH.FlatBuffers" version="1.4.0" targetFramework="net461" />
   <package id="Dfust.Hotkeys" version="1.2.6206.24906" targetFramework="net461" />
@@ -19,10 +19,10 @@
   <package id="lz4net" version="1.0.15.93" targetFramework="net461" />
   <package id="LZ4PCL" version="1.0.0" targetFramework="net461" />
   <package id="MarkerMetro.Unity.Ionic.Zlib" version="2.0.0.14" targetFramework="net461" />
-  <package id="Microsoft.Bcl.AsyncInterfaces" version="1.1.1" targetFramework="net48" />
+  <package id="Microsoft.Bcl.AsyncInterfaces" version="5.0.0" targetFramework="net48" />
   <package id="Microsoft.CSharp" version="4.7.0" targetFramework="net48" />
-  <package id="Microsoft.IO.RecyclableMemoryStream" version="1.3.4" targetFramework="net48" />
-  <package id="Microsoft.NETCore.Platforms" version="3.1.1" targetFramework="net48" />
+  <package id="Microsoft.IO.RecyclableMemoryStream" version="1.3.5" targetFramework="net48" />
+  <package id="Microsoft.NETCore.Platforms" version="5.0.0" targetFramework="net48" />
   <package id="Microsoft.Tpl.Dataflow" version="4.5.24" targetFramework="net48" />
   <package id="Microsoft.Win32.Primitives" version="4.3.0" targetFramework="net461" />
   <package id="MouseKeyHook" version="5.6.0" targetFramework="net461" />
@@ -33,17 +33,19 @@
   <package id="OpenGL.Net" version="0.8.4" targetFramework="net48" />
   <package id="OpenGL.Net.WinForms" version="0.8.4" targetFramework="net48" />
   <package id="PropertyGridEx" version="1.0.0" targetFramework="net461" />
-  <package id="protobuf-net" version="2.4.6" targetFramework="net48" />
+  <package id="protobuf-net" version="3.0.62" targetFramework="net48" />
+  <package id="protobuf-net.Core" version="3.0.62" targetFramework="net48" />
   <package id="RtfPipe" version="1.0.7388.1242" targetFramework="net48" />
   <package id="ScintillaNET_FindReplaceDialog" version="1.0.3.3" targetFramework="net48" />
-  <package id="SharpZipLib" version="1.2.0" targetFramework="net48" />
+  <package id="SharpZipLib" version="1.3.0" targetFramework="net48" />
   <package id="System.AppContext" version="4.3.0" targetFramework="net461" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net48" />
   <package id="System.Collections" version="4.3.0" targetFramework="net461" />
   <package id="System.Collections.Concurrent" version="4.3.0" targetFramework="net461" />
+  <package id="System.Collections.Immutable" version="5.0.0" targetFramework="net48" />
   <package id="System.Console" version="4.3.1" targetFramework="net461" />
   <package id="System.Diagnostics.Debug" version="4.3.0" targetFramework="net461" />
-  <package id="System.Diagnostics.DiagnosticSource" version="4.7.1" targetFramework="net48" />
+  <package id="System.Diagnostics.DiagnosticSource" version="5.0.0" targetFramework="net48" />
   <package id="System.Diagnostics.Tools" version="4.3.0" targetFramework="net461" />
   <package id="System.Diagnostics.Tracing" version="4.3.0" targetFramework="net461" />
   <package id="System.Globalization" version="4.3.0" targetFramework="net461" />
@@ -65,7 +67,7 @@
   <package id="System.Reflection.Primitives" version="4.3.0" targetFramework="net461" />
   <package id="System.Resources.ResourceManager" version="4.3.0" targetFramework="net461" />
   <package id="System.Runtime" version="4.3.1" targetFramework="net48" />
-  <package id="System.Runtime.CompilerServices.Unsafe" version="4.7.1" targetFramework="net48" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="5.0.0" targetFramework="net48" />
   <package id="System.Runtime.Extensions" version="4.3.1" targetFramework="net48" />
   <package id="System.Runtime.Handles" version="4.3.0" targetFramework="net461" />
   <package id="System.Runtime.InteropServices" version="4.3.0" targetFramework="net461" />
@@ -84,9 +86,9 @@
   <package id="UsefulCSharpThings" version="1.7.3" targetFramework="net48" />
   <package id="VGMToolbox" version="1.0.0.1040" targetFramework="net461" />
   <package id="VisualPlus" version="0.4.1.4-beta" targetFramework="net461" />
-  <package id="Vlc.DotNet.Core" version="3.0.0" targetFramework="net48" />
-  <package id="Vlc.DotNet.Core.Interops" version="3.0.0" targetFramework="net48" />
-  <package id="Vlc.DotNet.Forms" version="3.0.0" targetFramework="net48" />
+  <package id="Vlc.DotNet.Core" version="3.1.0" targetFramework="net48" />
+  <package id="Vlc.DotNet.Core.Interops" version="3.1.0" targetFramework="net48" />
+  <package id="Vlc.DotNet.Forms" version="3.1.0" targetFramework="net48" />
   <package id="WindowsAPICodePack-Core" version="1.1.2" targetFramework="net48" />
   <package id="WindowsAPICodePack-Shell" version="1.1.1" targetFramework="net48" />
   <package id="WinFormAnimation" version="1.6.0.4" targetFramework="net48" />
