MVVM with Catel
- mvvm pattern with Catel
- added wpf orchestra project to solution

--- a/WolvenKit.App/packages.config
+++ b/WolvenKit.App/packages.config
@@ -1,11 +1,14 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Catel.Core" version="5.12.8" targetFramework="net48" />
+  <package id="Catel.MVVM" version="5.12.8" targetFramework="net48" />
   <package id="CsvHelper" version="16.0.0" targetFramework="net48" />
   <package id="FastMember" version="1.5.0" targetFramework="net48" />
   <package id="Microsoft.Bcl.AsyncInterfaces" version="5.0.0" targetFramework="net48" />
   <package id="Microsoft.CSharp" version="4.7.0" targetFramework="net48" />
   <package id="Microsoft.NETCore.Platforms" version="5.0.0" targetFramework="net48" />
   <package id="Microsoft.Win32.Primitives" version="4.3.0" targetFramework="net48" />
+  <package id="Microsoft.Xaml.Behaviors.Wpf" version="1.1.19" targetFramework="net48" />
   <package id="NETStandard.Library" version="2.0.3" targetFramework="net48" />
   <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net48" />
   <package id="Pfim" version="0.9.1" targetFramework="net48" />
@@ -18,6 +21,8 @@
   <package id="System.Collections" version="4.3.0" targetFramework="net48" />
   <package id="System.Collections.Concurrent" version="4.3.0" targetFramework="net48" />
   <package id="System.Collections.Immutable" version="5.0.0" targetFramework="net48" />
+  <package id="System.ComponentModel.Annotations" version="4.6.0" targetFramework="net48" />
+  <package id="System.Configuration.ConfigurationManager" version="4.6.0" targetFramework="net48" />
   <package id="System.Console" version="4.3.1" targetFramework="net48" />
   <package id="System.Diagnostics.Debug" version="4.3.0" targetFramework="net48" />
   <package id="System.Diagnostics.DiagnosticSource" version="5.0.0" targetFramework="net48" />
@@ -48,6 +53,12 @@
   <package id="System.Runtime.InteropServices" version="4.3.0" targetFramework="net48" />
   <package id="System.Runtime.InteropServices.RuntimeInformation" version="4.3.0" targetFramework="net48" />
   <package id="System.Runtime.Numerics" version="4.3.0" targetFramework="net48" />
+  <package id="System.Runtime.Serialization.Formatters" version="4.3.0" targetFramework="net48" />
+  <package id="System.Runtime.Serialization.Primitives" version="4.3.0" targetFramework="net48" />
+  <package id="System.Runtime.Serialization.Xml" version="4.3.0" targetFramework="net48" />
+  <package id="System.Security.AccessControl" version="4.6.0" targetFramework="net48" />
+  <package id="System.Security.Permissions" version="4.6.0" targetFramework="net48" />
+  <package id="System.Security.Principal.Windows" version="4.6.0" targetFramework="net48" />
   <package id="System.Text.Encoding" version="4.3.0" targetFramework="net48" />
   <package id="System.Text.Encoding.Extensions" version="4.3.0" targetFramework="net48" />
   <package id="System.Text.RegularExpressions" version="4.3.1" targetFramework="net48" />
