--- a/WolvenKit/packages.config
+++ b/WolvenKit/packages.config
@@ -3,6 +3,8 @@
   <package id="AltoControls" version="1.0.1" targetFramework="net461" />
   <package id="AutoCompleteMenu-ScintillaNET" version="1.6.2" targetFramework="net48" />
   <package id="Autoupdater.NET.Official" version="1.6.4" targetFramework="net48" />
+  <package id="Catel.Core" version="5.12.8" targetFramework="net48" />
+  <package id="Catel.MVVM" version="5.12.8" targetFramework="net48" />
   <package id="CircularProgressBar" version="2.8.0.16" targetFramework="net48" />
   <package id="CommandLineParser" version="2.8.0" targetFramework="net48" />
   <package id="CSharpImageLibrary" version="4.2.0" targetFramework="net48" />
@@ -25,6 +27,7 @@
   <package id="Microsoft.NETCore.Platforms" version="5.0.0" targetFramework="net48" />
   <package id="Microsoft.Tpl.Dataflow" version="4.5.24" targetFramework="net48" />
   <package id="Microsoft.Win32.Primitives" version="4.3.0" targetFramework="net461" />
+  <package id="Microsoft.Xaml.Behaviors.Wpf" version="1.1.19" targetFramework="net48" />
   <package id="MouseKeyHook" version="5.6.0" targetFramework="net461" />
   <package id="NAudio" version="1.10.0" targetFramework="net461" />
   <package id="NETStandard.Library" version="2.0.3" targetFramework="net461" />
@@ -43,6 +46,8 @@
   <package id="System.Collections" version="4.3.0" targetFramework="net461" />
   <package id="System.Collections.Concurrent" version="4.3.0" targetFramework="net461" />
   <package id="System.Collections.Immutable" version="5.0.0" targetFramework="net48" />
+  <package id="System.ComponentModel.Annotations" version="4.6.0" targetFramework="net48" />
+  <package id="System.Configuration.ConfigurationManager" version="4.6.0" targetFramework="net48" />
   <package id="System.Console" version="4.3.1" targetFramework="net461" />
   <package id="System.Diagnostics.Debug" version="4.3.0" targetFramework="net461" />
   <package id="System.Diagnostics.DiagnosticSource" version="5.0.0" targetFramework="net48" />
@@ -73,6 +78,12 @@
   <package id="System.Runtime.InteropServices" version="4.3.0" targetFramework="net461" />
   <package id="System.Runtime.InteropServices.RuntimeInformation" version="4.3.0" targetFramework="net461" />
   <package id="System.Runtime.Numerics" version="4.3.0" targetFramework="net461" />
+  <package id="System.Runtime.Serialization.Formatters" version="4.3.0" targetFramework="net48" />
+  <package id="System.Runtime.Serialization.Primitives" version="4.3.0" targetFramework="net48" />
+  <package id="System.Runtime.Serialization.Xml" version="4.3.0" targetFramework="net48" />
+  <package id="System.Security.AccessControl" version="4.6.0" targetFramework="net48" />
+  <package id="System.Security.Permissions" version="4.6.0" targetFramework="net48" />
+  <package id="System.Security.Principal.Windows" version="4.6.0" targetFramework="net48" />
   <package id="System.Text.Encoding" version="4.3.0" targetFramework="net461" />
   <package id="System.Text.Encoding.Extensions" version="4.3.0" targetFramework="net461" />
   <package id="System.Text.RegularExpressions" version="4.3.1" targetFramework="net48" />
