--- a/WolvenKit/WolvenKit.csproj
+++ b/WolvenKit/WolvenKit.csproj
@@ -639,6 +639,7 @@
     <Compile Include="Utility\UnbundleGameArgs.cs" />
     <Compile Include="Utility\AddFileArgs.cs" />
     <Compile Include="Utility\LoadFileArgs.cs" />
+    <Compile Include="wcc_commands.cs" />
     <Compile Include="WitcherListViewItem.cs" />
     <Compile Include="Utility\CommonUIFunctions.cs" />
     <Compile Include="Forms\UserControl\frmAbout.cs">
@@ -1023,7 +1024,7 @@
       <Name>WolvenKit.Bundles</Name>
     </ProjectReference>
     <ProjectReference Include="..\WolvenKit.Common\WolvenKit.Common.csproj">
-      <Project>{4d1019f1-f099-450f-85b8-697e0332a94f}</Project>
+      <Project>{93a10f45-1846-4ae7-939b-5b5e39b260be}</Project>
       <Name>WolvenKit.Common</Name>
     </ProjectReference>
     <ProjectReference Include="..\WolvenKit.CR2W\WolvenKit.CR2W.csproj">
